--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -119,14 +119,14 @@ paths:
     get:
       tags:
         - cohortBuilder
-      description: Returns criteria tree with the specified name
-      operationId: "getDrugBrandOrIngredientByName"
+      description: Returns criteria tree matching value
+      operationId: "getDrugBrandOrIngredientByValue"
       parameters:
         - in: query
-          name: name
+          name: value
           type: string
           required: true
-          description: name of ingredient or brand
+          description: matches name or code of drug
         - in: query
           name: limit
           type: integer
