Remove Terra-ToS reminder email endpoint and related code

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -166,7 +166,6 @@
     }]
   },
   "termsOfService": {
-    "latestAouVersion": 1,
-    "latestTerraTosTimestamp": "1985-10-26T01:22:33Z"
+    "latestAouVersion": 1
   }
 }
