--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -165,7 +165,6 @@
     }]
   },
   "termsOfService": {
-    "latestAouVersion": 1,
-    "latestTerraTosTimestamp": "2023-01-11T22:23:00Z"
+    "latestAouVersion": 1
   }
 }
