--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -148,7 +148,6 @@
     "usersPerSynchronizeAccessTask": 50
   },
   "termsOfService": {
-    "latestAouVersion": 1,
-    "latestTerraTosTimestamp": "2023-01-11T22:23:00Z"
+    "latestAouVersion": 1
   }
 }
