--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -171,7 +171,6 @@
     ]
   },
   "termsOfService": {
-    "latestAouVersion": 1,
-    "latestTerraTosTimestamp": "2023-01-11T22:23:00Z"
+    "latestAouVersion": 1
   }
 }
