--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.29.4",
     "nouislider": "^14.1.1",
     "nouislider-react": "^3.3.7",
+    "oidc-client-ts": "^2.2.0",
     "outdated-browser-rework": "^2.8.0",
     "portable-fetch": "^3.0.0",
     "primeicons": "^5.0.0",
@@ -65,6 +66,7 @@
     "react-iframe": "^1.8.0",
     "react-interactive": "^0.9.1",
     "react-modal": "^3.8.1",
+    "react-oidc-context": "^2.2.0",
     "react-onclickoutside": "^6.7.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
