Snippet to check if cromwell server exist and update the cromwell config file if it does

--- a/api/snippets-menu/aou-snippets-menu.js.template
+++ b/api/snippets-menu/aou-snippets-menu.js.template
@@ -11,7 +11,8 @@ define([
     const pyMenus = [
       {{PY_DATASET_MENU_JSON}},
       {{PY_GCS_MENU_JSON}},
-      {{PY_SQL_MENU_JSON}}
+      {{PY_SQL_MENU_JSON}},
+      {{PY_CROMWELL_JSON}}
     ];
     const rMenus = [
       {{R_DATASET_MENU_JSON}},
