--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -117,8 +117,7 @@
     "enablePersistentDisk": true,
     "enablePrivateDataprocWorker": false,
     "ccSupportWhenAdminLocking": true,
-    "enableUpdatedDemographicSurvey": true,
-    "enableGkeApp": false
+    "enableUpdatedDemographicSurvey": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
