--- a/api/config/cdr_config_preprod.json
+++ b/api/config/cdr_config_preprod.json
@@ -26,21 +26,21 @@
       "cdrVersionId": 1,
       "name": "All of Us Registered Tier Dataset v3",
       "bigqueryProject": "fc-aou-cdr-preprod",
-      "bigqueryDataset": "R2019Q4R3",
+      "bigqueryDataset": "R2019Q4R6",
       "creationTime": "2019-10-21 00:00:00Z",
       "releaseNumber": 3,
-      "numParticipants": 224143,
+      "numParticipants": 224097,
       "cdrDbName": "r_2019q4_10",
       "accessTier": "registered"
     },
     {
       "cdrVersionId": 2,
-      "name": "All of Us Registered Tier Dataset v3 rc2",
-      "bigqueryProject": "fc-aou-cdr-preprod",
-      "bigqueryDataset": "R2019Q4R4",
+      "name": "[Removed] All of Us Registered Tier Dataset v3 rc2",
+      "bigqueryProject": "",
+      "bigqueryDataset": "",
       "creationTime": "2020-04-16 00:00:00Z",
       "releaseNumber": 4,
-      "numParticipants": 224001,
+      "numParticipants": 0,
       "cdrDbName": "r_2019q4_10",
       "accessTier": "registered"
     },
@@ -62,10 +62,10 @@
       "cdrVersionId": 4,
       "name": "All of Us Registered Tier Dataset v4",
       "bigqueryProject": "fc-aou-cdr-preprod",
-      "bigqueryDataset": "R2020Q4R3",
+      "bigqueryDataset": "R2020Q4R5",
       "creationTime": "2020-10-20 00:00:00Z",
       "releaseNumber": 5,
-      "numParticipants": 315297,
+      "numParticipants": 315250,
       "cdrDbName": "r_2020q4_4",
       "hasFitbitData": true,
       "hasCopeSurveyData": true,
