RW-9187 Update GVS bigquery dataset name and filter set name

--- a/api/config/cdr_config_preprod.json
+++ b/api/config/cdr_config_preprod.json
@@ -210,8 +210,8 @@
       "isDefault": true,
       "bigqueryProject": "fc-aou-cdr-preprod-ct",
       "bigqueryDataset": "C2022Q4R6",
-      "wgsBigqueryDataset": "wgs_C2022Q2",
-      "wgsFilterSetName": "charlie",
+      "wgsBigqueryDataset": "wgs_C2023Q1",
+      "wgsFilterSetName": "delta",
       "creationTime": "2022-11-15 00:00:00Z",
       "releaseNumber": 14,
       "numParticipants": 413457,
