--- a/e2e/package.json
+++ b/e2e/package.json
@@ -47,8 +47,8 @@
     "@types/faker": "^5.5.9",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.1",
-    "@types/jest-environment-puppeteer": "5.0.2",
-    "@types/lodash": "^4.14.182",
+    "@types/jest-environment-puppeteer": "^5.0.3",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.35",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -69,7 +69,7 @@
     "jest-puppeteer": "^5.0.4",
     "jest-stare": "^2.3.0",
     "lodash": "^4.17.20",
-    "otplib": "12.0.0",
+    "otplib": "^12.0.1",
     "prettier": "^2.2.1",
     "puppeteer": "^6",
     "rimraf": "^3.0.2",
