Added featureFlag: enableConceptSetsInCohortBuilder

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -117,7 +117,8 @@
     "enablePersistentDisk": true,
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
-    "enableUpdatedDemographicSurvey": true
+    "enableUpdatedDemographicSurvey": true,
+    "enableConceptSetsInCohortBuilder": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
