--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -117,7 +117,8 @@
     "enablePersistentDisk": true,
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": true,
-    "enableUpdatedDemographicSurvey": true
+    "enableUpdatedDemographicSurvey": true,
+    "enableConceptSetsInCohortBuilder": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-preprod",
