--- a/ui/package.json
+++ b/ui/package.json
@@ -68,6 +68,7 @@
     "react-onclickoutside": "^6.7.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^2.4.3",
     "react-select": "^3.0.8",
     "react-spring": "8.0.27",
     "react-switch": "^6",
