--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4720,6 +4720,12 @@ definitions:
         type: boolean
         default: false
         description: Whether to enable adding ConceptSets to CohortBuilder.
+      enableControlledTierTrainingRenewal:
+        type: boolean
+        default: true
+        description: >
+          Whether users are directed to complete Controlled Tier Training renewal.
+          If false, hide or add text indicating that it is not currently available.
 
   RuntimeImage:
     type: object
