false in all envs

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -118,7 +118,8 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableUpdatedDemographicSurvey": true,
-    "enableConceptSetsInCohortBuilder": true
+    "enableConceptSetsInCohortBuilder": true,
+    "enableControlledTierTrainingRenewal": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
