--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -118,7 +118,8 @@
     "enablePrivateDataprocWorker": false,
     "ccSupportWhenAdminLocking": true,
     "enableUpdatedDemographicSurvey": true,
-    "enableConceptSetsInCohortBuilder": false
+    "enableConceptSetsInCohortBuilder": false,
+    "enableControlledTierTrainingRenewal": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
