RW-9503 Add tests and format changes

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6374,7 +6374,7 @@ definitions:
         description: The user-supplied name for the user app. Read only.
       appType:
         "$ref": "#/definitions/AppType"
-      appCreator:
+      creator:
         type: string
         description: The creator of the app
       createdDate:
