DT-260 add enableDataExplorer config flag

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -121,7 +121,8 @@
     "enableConceptSetsInCohortBuilder": true,
     "enableControlledTierTrainingRenewal": true,
     "enableCromwellGKEApp": true,
-    "enableRStudioGKEApp": true
+    "enableRStudioGKEApp": true,
+    "enableDataExplorer": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
