flip enableControlledTierTrainingRenewal to true in all envs

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -119,7 +119,7 @@
     "ccSupportWhenAdminLocking": false,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": true,
-    "enableControlledTierTrainingRenewal": false,
+    "enableControlledTierTrainingRenewal": true,
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true
   },
