--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -119,7 +119,7 @@
     "ccSupportWhenAdminLocking": true,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
-    "enableControlledTierTrainingRenewal": false,
+    "enableControlledTierTrainingRenewal": true,
     "enableCromwellGKEApp": false,
     "enableRStudioGKEApp": false
   },
