Add RStudio feature flag

--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -119,7 +119,8 @@
     "ccSupportWhenAdminLocking": false,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
-    "enableControlledTierTrainingRenewal": false
+    "enableControlledTierTrainingRenewal": false,
+    "enableRStudioGKEApp": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-stable",
