--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -119,7 +119,8 @@
     "ccSupportWhenAdminLocking": true,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
-    "enableControlledTierTrainingRenewal": false
+    "enableControlledTierTrainingRenewal": false,
+    "enableRStudioGKEApp": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
