Convert showAppsPanel feature flag to a server-side enableCromwellGKEApp

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -120,6 +120,7 @@
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": true,
     "enableControlledTierTrainingRenewal": false,
+    "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true
   },
   "actionAudit": {
