--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -120,6 +120,7 @@
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
     "enableControlledTierTrainingRenewal": false,
+    "enableCromwellGKEApp": false,
     "enableRStudioGKEApp": false
   },
   "actionAudit": {
