--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -120,6 +120,7 @@
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
     "enableControlledTierTrainingRenewal": false,
+    "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true
   },
   "actionAudit": {
