[RW-9408][risk=low] Create and delete RStudio GKE Apps (#7450)

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -119,7 +119,9 @@
     "ccSupportWhenAdminLocking": true,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
-    "enableControlledTierTrainingRenewal": false
+    "enableControlledTierTrainingRenewal": false,
+    "enableCromwellGKEApp": true,
+    "enableRStudioGKEApp": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-preprod",
