DT-19 add concept set properties to domain enum

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4257,6 +4257,8 @@ definitions:
     - STRUCTURAL_VARIANT_DATA
     - ZIP_CODE_SOCIOECONOMIC
     - ARRAY_DATA
+    - CONCEPT_SET
+    - CONCEPT_QUICK_ADD
   Surveys:
     type: string
     description: a survey for concepts
