Disable RStudio on Staging - it doesn't work anyway

--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -121,7 +121,7 @@
     "enableConceptSetsInCohortBuilder": false,
     "enableControlledTierTrainingRenewal": true,
     "enableCromwellGKEApp": true,
-    "enableRStudioGKEApp": true,
+    "enableRStudioGKEApp": false,
     "enableDataExplorer": false
   },
   "actionAudit": {
