Run tests in parallel and remove red herrings

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -250,6 +250,7 @@ spotless {
 
 test {
     useJUnitPlatform()
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
 
 // The plugin generates configuration names by concatenating SourceSet names
