--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -71,7 +71,7 @@
     "gSuiteDomain": "fake-research-aou.org"
   },
   "server": {
-    "apiBaseUrl": "https:\/\/api-dot-all-of-us-workbench-test.appspot.com",
+    "apiBaseUrl": "http:\/\/localhost:8081",
     "uiBaseUrl": "http:\/\/localhost:4200",
     "publicApiKeyForErrorReports": "",
     "projectId": "all-of-us-workbench-test",
